$Id: CHANGES,v 1.26 2004/08/20 06:53:16 psavola Exp $

08/20/2004	Minor documentation cleanups.

11/21/2003	Add support for Router Preferences and More Specific
		Routes from Markku Savela <msa@burp.tkv.asdf.org>.
		NOTE! The specification is not final yet, there will be
		changes!  (Man page, documentation and radvdump support
		by Pekka Savola.)

09/11/2003	When starting up, check if the MAC address is all zero
		(could happen e.g. with bridge interfaces with no attached
		physical interfaces), and warn if so. For more information,
		http://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=103469

06/10/2003	When chrooting, check the possible return code 
		from chdir("/").

03/08/2003	Add patch from MAEDA Naoaki <maeda.naoaki@jp.fujitsu.com>
		to discard RS's from the unspecied source address with
		link-layer address option, as required by RFC2461.

10/28/2002	Release 0.7.2:
		 - add support for VLANs (from USAGI)
		 - make it compile better on newer NetBSD's (NetBSD)
		 - fix a syntax error in radvd.conf(5) sample documentation
		 - use IPV6_RECV{HOPLIMIT,PKTINFO} not 
                       IPV6_{HOPLIMIT,PKTINFO} if supported
		 - (in Red Hat spec file) don't create radvd gid explicitly
		 - a lot of coding style cleanups

01/16/2002	Release 0.7.1.

01/12/2002	Update config.{guess,sub} from ftp.gnu.org; update INTRO.
		Marko Myllynen and Debian bug #115992.

01/02/2002	Ensure NULL-termination with strncpy.

12/31/2001	Radvdump fixes: eliminate a warning of Prefix Information
		sections with '-d -f'; add a note that
		{Min,Max}RtrAdvInterval cannot be obtained with '-f';
		implement '-e' to be used with '-f' which omits all
		advertised default settings. Mostly by Marko Myllynen.

12/28/2001	Small cleanups.  AdvSendAdvert is implicitly off by
		default.  Check configuration file permissions; must
		not be writable by others, and if non-root,
		not by self/own group.  By Marko Myllynen.

12/21/2001	Check via sysctl that IPv6 forwarding is enabled;